# lastfm-extended-scrobbles

./: .gitignore  .gitmodules  CHANGELOG.md  Cargo.toml  README.md  analyse.py  pyproject.toml  requirements.txt
cancellation-token/: Cargo.toml
cancellation-token/src/: future.rs  lib.rs  token.rs
core/: configuration.py  exception.py  genres.py  library.py  musicbrainz.py  prevent_sleep.py  scrobble.py  scrobbledtrack.py  state.py  track.py  utilities.py
data/: config.EXAMPLE.toml  configuration.TEMPLATE.toml
scripts/: download-scrobbles.py
src/: cli.rs  commands.rs  main.rs
src/commands/: download_scrobbles.rs
src/commands/download_scrobbles/: tui.rs
src/configuration/: structure.rs
src/downloader/: location.rs  mod.rs  scanner.rs  structure.rs
src/lastfm/: errors.rs  mod.rs
