[tool.poetry]
name = "lastfm-analyse"
version = "0.1.0"
description = ""
authors = ["Simon GoriÄar <simon.peter.goricar@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
toml = "^0.10.2"
fuzzywuzzy = "^0.18.0"
python-Levenshtein = "^0.12.0"
mutagen = "^1.45.1"
openpyxl = "^3.0.5"
youtube-search-python = "^1.3.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
