[tool.poetry]
name = "lastfm-extended-stats"
version = "1.0.0"
description = "Generate extended stats from your Last.fm scrobbles using your local music library, MusicBrainz and YouTube."
repository = "https://github.com/DefaultSimon/lastfm-extended-scrobbles"
authors = ["Simon Goričar <simon.peter.goricar@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
toml = "^0.10.2"
fuzzywuzzy = "^0.18.0"
python-Levenshtein = "^0.12.0"
mutagen = "^1.45.1"
openpyxl = "^3.0.5"
youtube-search-python = "^1.3.2"
musicbrainzngs = "^0.7.1"
requests = "^2.25.0"
pylast = "^4.0.0"
pyyaml = "^5.3.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
